src/test/resources/automata/cocos/invalid/MissingInitialState.aut
/* (c) https://github.com/MontiCore/monticore */

automaton MissingInitialState {
  state S <<final>>;
}
